resolve and remove some of the suppressed warnings
The code generator required changing how the context was passed around
so that it was not nullable. Otherwise minor touchups and deletion of
suppressions that are not reproducable.